--- a/experiment_config.yaml
+++ b/experiment_config.yaml
@@ -1,7 +1,3 @@
 model: "microsoft/phi-1.5"
-data: "../data/socialiqa_jsonl_overfeat"
-iters: 200
-adapter-path: "adapters"
-seed: 0
-lora-layers: 16
-batch-size: 3
+data: "socialiqa_debug"
+base-model: True
