--- a/output/microsoft/phi-1.5/socialiqa_jsonl_overfeat/experiment_config.yaml
+++ b/output/microsoft/phi-1.5/socialiqa_jsonl_overfeat/experiment_config.yaml
@@ -1,7 +1,5 @@
 model: "microsoft/phi-1.5"
-data: "../data/socialiqa_jsonl_overfeat"
-iters: 200
-adapter-path: "adapters"
-seed: 0
-lora-layers: 16
-batch-size: 3
+data: "../../data/socialiqa_jsonl"
+batch-size: 1
+base-model: True
+test-batches: 3400
